--- a/_config.yml
+++ b/_config.yml
@@ -9,24 +9,26 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone: Asia/Shanghai
+timezone: America/Chicago
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: AIM-AHEAD DICB Data Governance # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: An AIM-AHEAD Project Site # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Collaborative project between Tuskegee University and UTHSC at Houston on AIM-AHEAD DICB initiative, focusing on data governance.
+
+
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://aim-ahead-dicb.github.io/dicb_tuut2/"
 
 github:
-  username: github_username # change to your github username
+  username: x1jiang # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
@@ -34,8 +36,8 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Xiaoqian Jiang
+  email: xiaoqan.jiang@uth.tmc.edu # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
@@ -101,7 +103,7 @@ comments:
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
   self_host:
-    enabled: # boolean, keep empty means false
+    enabled:  # boolean, keep empty means false
     # specify the Jekyll environment, empty means both
     # only works if `assets.self_host.enabled` is 'true'
     env: # [development|production]
@@ -183,6 +185,12 @@ exclude:
   - LICENSE
   - rollup.config.js
   - package*.json
+  - _posts/2019-08-08-text-and-typography.md
+  - _posts/2019-08-08-write-a-new-post.md
+  - _posts/2019-08-09-getting-started.md
+  - _posts/2019-08-11-customize-the-favicon.md
+  - _tabs/tags.md
+  - _tabs/categories.md
 
 jekyll-archives:
   enabled: [categories, tags]
