--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "https://aim-ahead-dicb.github.io/dicb_uttu/"
 
 # ------------ The following options are not recommended to be modified ------------------
 
