--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://aim-ahead-dicb.github.io/dicb_uttu/"
+url: "https://aim-ahead-dicb.github.io"
 
 github:
   username: x1jiang # change to your github username
@@ -114,7 +114,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "https://aim-ahead-dicb.github.io/"
+baseurl: "/dicb_uttu"
 
 # ------------ The following options are not recommended to be modified ------------------
 
