--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,3 +15,8 @@ sille_bille:
   name: Dinesh Prasanth Moluguwan Krishnamoorthy
   twitter: dinesh_MKD
   url: https://github.com/SilleBille/
+
+xj:
+  name: Xiaoqian Jiang
+  twitter: cotes2020
+  url: https://sbmi.uth.edu/faculty-and-staff/xiaoqian-jiang.htm
