--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/Chicago
 
 title: AIM-AHEAD DICB Data Governance # the main title
 
-tagline: An AIM-AHEAD Project Site # it will display as the sub-title
+tagline: An AIM-AHEAD Project Supported by NIH 1OT2OD032581-02-164 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   Collaborative project between Tuskegee University and UTHSC at Houston on AIM-AHEAD DICB initiative, focusing on data governance.
