--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,5 +18,11 @@ sille_bille:
 
 xj:
   name: Xiaoqian Jiang
-  twitter: cotes2020
+  twitter: 
   url: https://sbmi.uth.edu/faculty-and-staff/xiaoqian-jiang.htm
+
+
+dv:
+  name: Deepthi Viswaroopan
+  twitter: 
+  url: https://scholar.google.com/citations?user=WBKiJ_UAAAAJ&hl=en
