--- a/_data/people.yml
+++ b/_data/people.yml
@@ -10,11 +10,11 @@
 #   link: https://blackcomputeher.org/felesia-stukes/
 # # ... more people
 
-- name: Dr. Channapatna Prakash
-  role: Project Development Lead
-  university: Tuskegee University
-  image: /assets/img/headshot/Prakash.jpg
-  email: cprakash@tuskegee.edu
+# - name: Dr. Channapatna Prakash
+#   role: Project Development Lead
+#   university: Tuskegee University
+#   image: /assets/img/headshot/Prakash.jpg
+#   email: cprakash@tuskegee.edu
 # - name: Dr. Xiaoqian Jiang
 #   role: Project Development Lead
 #   university: UTHealth
