add back tag team

--- a/_config.yml
+++ b/_config.yml
@@ -189,8 +189,8 @@ exclude:
   - _posts/2019-08-08-write-a-new-post.md
   - _posts/2019-08-09-getting-started.md
   - _posts/2019-08-11-customize-the-favicon.md
-  - _tabs/tags.md
-  - _tabs/categories.md
+  # - _tabs/tags.md
+  # - _tabs/categories.md
 
 jekyll-archives:
   enabled: [categories, tags]
