add back images fix

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -12,12 +12,12 @@
 
 
 - name: Dr. Channapatna Prakash
-  role: Project Development Lead
+  role: Project Development Lead, PI
   university: Tuskegee University
   image: /assets/img/headshot/Prakash.jpg
   email: cprakash@tuskegee.edu
 - name: Dr. Xiaoqian Jiang
-  role: Project Development Lead
+  role: Project Development Lead, MPI
   university: UTHealth
   image: /assets/img/headshot/Xiaoqian.jpg
   email: xiaoqian.jiang@uth.tmc.edu
