--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Xiaoqian Jiang
+  contributors: Xiaoqian Jiang & Deepthi Viswaroopan
   email: xiaoqan.jiang@uth.tmc.edu # change to your email address
   links:
     # The first element serves as the copyright owner's link
