--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -26,3 +26,8 @@ dv:
   name: Deepthi Viswaroopan
   twitter: 
   url: https://scholar.google.com/citations?user=WBKiJ_UAAAAJ&hl=en
+
+ss:
+  name: Stephen O. Sodeke
+  twitter: 
+  url: https://connect.rtrn.net/profiles/display/93458
