--- a/_data/people.yml
+++ b/_data/people.yml
@@ -84,5 +84,5 @@
 - name: Deepthi Viswaroopan
   role: Website Developer
   university: UTHealth
-  image: /assets/img/headshot/Copy of DSC02426.jpg
+  image: /assets/img/headshot/DeepthiVis.jpg
   email: deepthi.viswaroopan@uth.tmc.edu
