--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -31,3 +31,9 @@ ss:
   name: Stephen O. Sodeke
   twitter: 
   url: https://connect.rtrn.net/profiles/display/93458
+
+
+cn:
+  name: Chitra Nayak
+  twitter: 
+  url: https://www.tuskegee.edu/Content/Uploads/Tuskegee/files/CAS/NayakTU_Physics_bio.pdf
