--- a/_data/people.yml
+++ b/_data/people.yml
@@ -86,3 +86,23 @@
   university: UTHealth
   image: /assets/img/headshot/DeepthiVis-1.jpg
   email: deepthi.viswaroopan@uth.tmc.edu
+- name: Tabitha Piner
+  role: Logistics Coordinator
+  university: Tuskegee University
+  image: /assets/img/headshot/TabithaPiner.jpg
+  email: tpiner@tuskegee.edu
+- name: Theodora Tibaikana
+  role: Graduate Research, Psychology
+  university: Tuskegee University
+  image: /assets/img/headshot/TheodoraTibaikana.jpg
+  email: ttibaikana3066@tuskegee.edu
+- name: Basit Hussain
+  role: Undergraduate Research, Computer Science
+  university: Tuskegee University
+  image: /assets/img/headshot/BasitHussain.jpg
+  email: bhaussain9957@tuskegee.edu
+- name: Zahin Fairuza
+  role: Graduate Research, Computer Science
+  university: Tuskegee University
+  image: /assets/img/headshot/ZahinFairuza.jpg
+  email: zfairuza9668@tuskegee.edu
