--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -37,3 +37,13 @@ cn:
   name: Chitra Nayak
   twitter: 
   url: https://www.tuskegee.edu/Content/Uploads/Tuskegee/files/CAS/NayakTU_Physics_bio.pdf
+
+fr:
+  name: Fitia Rakoto
+  twitter: 
+  url: https://github.com/fitia-rakoto
+
+ks:
+  name: Kshitij Shah
+  twitter: 
+  url: https://github.com/ShahKshitij31
