--- a/_data/people.yml
+++ b/_data/people.yml
@@ -109,7 +109,7 @@
 - name: Dr. Samuel A. Taylor
   role: Assistant Professor of Philosophy
   university: Tuskegee University
-  image: /assets/img/headshot/Samuel.jpg
+  image: /assets/img/headshot/Samuel.jpeg
   email: staylor@tuskegee.edu
 - name: Anita Paudel
   university: Tuskegee University
